--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.8.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.8.yaml
@@ -4,6 +4,8 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- vs2015
 hdf5:
 - 1.10.5
 pin_run_as_build:
@@ -15,3 +17,4 @@ python:
 zip_keys:
 - - python
   - c_compiler
+  - cxx_compiler
