--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,12 @@ source:
 
 build:
   number: 0
+  script_env:
+    - HDF5PLUGIN_SSE2=True  # [x86 or ppc64le]
+    - HDF5PLUGIN_SSE2=False  # [not x86 and not ppc64le]
+    - HDF5PLUGIN_NATIVE=False
+    - HDF5PLUGIN_AVX2=False
+    - HDF5PLUGIN_OPENMP=False
 
 requirements:
   build:
