--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,6 @@ conda_forge_output_validation: true
 provider:
   linux_ppc64le: azure
 test_on_native_only: true
+github:
+  branch_name: main
+  tooling_branch_name: main
