--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,13 @@ source:
   sha256: 58da2df01698be96dc4db6ec1639854b3425aae14bb8a0d6d9e1f9dbbb955c5e
 
 build:
-  number: 0
+  number: 1
   script_env:
     - HDF5PLUGIN_SSE2=True  # [x86 or ppc64le]
     - HDF5PLUGIN_SSE2=False  # [not x86 and not ppc64le]
     - HDF5PLUGIN_NATIVE=False
     - HDF5PLUGIN_AVX2=False
+    - HDF5PLUGIN_BMI2=False
     - HDF5PLUGIN_OPENMP=False
 
 requirements:
