Add pkg-config build requirement
Co-authored-by: Mark Harfouche <mark.harfouche@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ build:
 
 requirements:
   build:
+    - pkg-config   # [unix]
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler("c") }}
