--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@ package:
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: cf78f1426b5868128b9ec6c498b70d6734e1dc8007a8ed1e7282954ab421b3fa
+  patches:
+    # https://github.com/silx-kit/hdf5plugin/pull/339
+    - 0001-convert-pkgconfig-link-args-to-msvc.patch
 
 build:
   number: 1
